Fix homepage and menu overlapping
tree@https://github.com/urbit/tree/commit/88abd896771460b698c905c36d8c2372e2090d4d

--- a/web/tree/main.css
+++ b/web/tree/main.css
@@ -1,5 +1,6 @@
+@charset "UTF-8";
 .col-md-10.body {
-  padding-left: 2.8125rem; }
+  padding-left: 0; }
 
 @media (max-width: 767px) {
   .col-md-10.body {
@@ -83,7 +84,6 @@ img.logo.first {
   padding-left: 0;
   padding-right: 0;
   background-color: #fff;
-  max-width: 16.66667%;
   transition: max-width .2s ease-in-out;
   position: fixed;
   z-index: 100; }
@@ -101,8 +101,7 @@ img.logo.first {
   .ctrl a.nav-link {
     letter-spacing: 1px; }
   .ctrl .selected a.nav-link {
-    font-weight: 500;
-    letter-spacing: 0; }
+    font-weight: 500; }
 
 .ctrl.open,
 .ctrl:hover {
@@ -253,6 +252,9 @@ img.logo.first {
 [data-path^='/docs'] .selected .nav-link {
   color: #02D124; }
 
+[data-path^='/docs'] .nav-link {
+  font-weight: 500; }
+
 [data-path^='/docs'] .home {
   background-color: #0500F0;
   border-color: #0500F0; }
@@ -279,6 +281,13 @@ img.logo.first {
     line-height: .7rem;
     margin-left: .05rem;
     font-size: 1rem; } }
+
+[data-path^='/docs/system/hoon/runes'] .nav-link {
+  font-family: 'scp'; }
+
+[data-path^='/docs/system/hoon/runes'] .nav-link,
+[data-path^='/docs/system/hoon/runes'] .ctrl .selected a.nav-link {
+  font-weight: 600; }
 
 .app {
   vertical-align: top;
@@ -313,8 +322,45 @@ img.logo.first {
     line-height: 1rem;
     margin-bottom: 1rem; } }
 
+.lead h1:first-of-type {
+  padding-bottom: 0; }
+
 .body[data-path^='/docs'] h1 {
   color: #0500F0; }
+
+.body[data-path^='/docs'] h1 code {
+  background-color: transparent;
+  color: #0500F0;
+  padding: 0; }
+
+.body[data-path^='/docs'] .book h2 {
+  color: #B1B7BD; }
+
+.body[data-path^='/docs'] .book h2 code {
+  color: #0500F0;
+  background-color: transparent; }
+
+.body[data-path^='/docs'] .book h2 a {
+  color: #0500F0; }
+
+.body[data-path^='/docs'] .book hr {
+  margin-bottom: 3rem; }
+
+.body[data-path^='/docs/system/hoon/runes/'] h1 {
+  color: #B1B7BD; }
+
+.body[data-path^='/docs/system/hoon/runes/basic'] h1 {
+  color: #0500F0; }
+
+.body[data-path^='/docs/system/hoon/library/'] h3 {
+  font-size: 1.5rem; }
+
+.body[data-path^='/docs/system/hoon/library/'] h2 {
+  font-size: 1rem; }
+
+.body[data-path^='/docs/system/hoon/library/'] .toc h3 {
+  padding-top: 0;
+  margin-bottom: 0; }
 
 @keyframes menu-open {
   0% {
@@ -406,9 +452,13 @@ img.logo.first {
   .menu.open .contents {
     top: 3rem; } }
 
-.list h1 {
+.list h1,
+.list h1:first-of-type {
   font-size: inherit;
-  font-weight: inherit; }
+  font-weight: inherit;
+  padding-bottom: 0;
+  margin-bottom: 0;
+  line-height: 2rem; }
 
 .list h1.error {
   font-size: 1.6rem;
@@ -427,9 +477,63 @@ img.logo.first {
     font-weight: 500;
     height: 2rem; }
 
+.body[data-path^='/docs'] .list.runes {
+  margin-top: 3rem; }
+  .body[data-path^='/docs'] .list.runes li {
+    height: 3rem; }
+  .body[data-path^='/docs'] .list.runes a h1,
+  .body[data-path^='/docs'] .list.runes a div,
+  .body[data-path^='/docs'] .list.runes a p {
+    display: inline; }
+  .body[data-path^='/docs'] .list.runes a {
+    text-decoration: none; }
+  .body[data-path^='/docs'] .list.runes a,
+  .body[data-path^='/docs'] .list.runes a h1 code {
+    color: #000; }
+  .body[data-path^='/docs'] .list.runes a h1 code {
+    margin-right: 1rem;
+    background-color: transparent;
+    color: #0500F0; }
+  .body[data-path^='/docs'] .list.runes a code {
+    background-color: #eceeef; }
+  .body[data-path^='/docs'] .list.runes a code {
+    padding: .3rem; }
+  .body[data-path^='/docs'] .list.runes a:after {
+    content: "▶";
+    width: 1rem;
+    font-size: .6rem;
+    vertical-align: middle;
+    padding: .3rem;
+    padding-top: .4rem;
+    line-height: 1rem;
+    margin-left: 1rem;
+    background-color: #B1B7BD;
+    color: #fff; }
+  .body[data-path^='/docs'] .list.runes a:hover:after {
+    background-color: #0500F0; }
+
+.kids.runes h1 {
+  padding-top: 3rem; }
+
+.kids.runes h2 {
+  font-size: 1.5rem;
+  margin-bottom: 1rem; }
+
+.kids.runes > div {
+  margin-top: 6rem; }
+
+.kids.runes > hr {
+  display: none; }
+
+.kids.runes > div p:first-of-type {
+  font-weight: 500; }
+
 .sections h1 {
   font-size: 2rem;
   color: #0500F0; }
+
+.sections h1:first-of-type {
+  padding-bottom: 0; }
 
 .sections li h1 {
   font-size: 1.2rem; }
@@ -449,6 +553,7 @@ img.logo.first {
   display: inline-block;
   vertical-align: top;
   margin-right: 3rem;
+  margin-top: 2rem;
   min-width: 14rem;
   margin-bottom: 3rem; }
 
